--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,13 +1,143 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8"/>
+    <title>{% block title %}Project07{% endblock %}</title>
+    {% block stylesheets %}
+
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+              integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link href="{{ asset('bundles/app/css/style.css') }}" rel="stylesheet" type="text/css"/>
+
+    {% endblock %}
+    <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}"/>
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+    <style>
+
+    </style>
+
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+    <!--SHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOILSHTOIL -->
+
+
+
+</head>
+<body>
+<header>
+    <section class="container-lg">
+        {% block header %}
+    </section>
+</header>
+<main class="container-fluid padding">
+</main>
+<div class="wrapper">
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>WELCOMIREN</h3>
+        </div>
+        <ul class="list-unstyled components">
+            <li>
+                <a href="#">Home</a>
+                " path('AppBundle:CartController:showCartItems') "
+
+            </li>
+            <li>
+                <a href="#">Profile</a>
+            </li>
+            <li>
+                <a href="#">Cart</a>
+            </li>
+            <li>
+                <a href="#">Search</a>        <!--  -->
+            </li>
+            <li>
+                <a href="#">Post Add</a>
+            </li>
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Eye
+                    Catchers</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="#">Prod1</a>
+                    </li>
+                    <li>
+                        <a href="#">Prod2</a>
+                    </li>
+                    <li>
+                        <a href="#">Prod3</a>
+                    </li>
+                </ul>
+            </li>
+            <li class="active">
+                <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Help &
+                    Contact</a>
+                <ul class="collapse list-unstyled" id="homeSubmenu">
+                    <li>
+                        <a href="#">Prod1</a>
+                    </li>
+                    <li>
+                        <a href="#">Prod2</a>
+                    </li>
+                    <li>
+                        <a href="#">Prod3</a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
+
+    <div class="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <button type="button" id="sidebarCollapse" class="btn btn-info">
+                <i class="fa fa-align-justify"></i> <span>toggle sidebar</span>
+            </button>
+
+            <!--<a class="navbar-brand" href="#">Navbar</a> -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="banner">
+                <i class="fa fa-car"></i>
+                <i class="fa fa-car" style="font-size:33px;"></i>
+            </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">#stayhome</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Legal</a>
+                    </li>
+                </ul>
+            </div>
+
+        </nav>
+        {% endblock %}
+        {% block body %} {% endblock %}
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"
+            integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+            crossorigin="anonymous"></script>
+    <script src="/src/AppBundle/Resources/public/js/main.js" type="text/javascript"></script>
+    <script>
+        $(document).ready(function(){
+            $('#sidebarCollapse').on('click',function(){
+                $('#sidebar').toggleClass('active');
+            });
+        });
+    </script>
+{% endblock %}
+</body>
 </html>
