--- a/app/Resources/views/home.html.twig
+++ b/app/Resources/views/home.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends '::base.html.twig' %}
 {% block body %}
 <h1>Hello </h1>
 <p>You have 0 new notifications.
